src/objects/pse__Time_Variance_Calculation__c.object
<CustomObject>
    <customHelpPage>pse__TimeVarianceHelp</customHelpPage>
    <description>A container object holding information on time variance calculations on the difference between a resource’s standard working hours and approved working hours for a calendar week.  Time variance calculation and detail records are created when you calculate time variance for a region, practice, or group. FinancialForce PSA calculates time variance as a percentage based on the number of approved working hours divided into the number of recorded working hours. You can reflect this as a percentage or as strict hours. Run time variance reports on the information stored in this object to understand how your resources are over-scheduled or under-scheduled with their work hours.</description>
    <fields>
        <fullName>pse__Allowed_Variance_Over__c</fullName>
        <label>Allowed Variance Over</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Allowed_Variance_Under__c</fullName>
        <label>Allowed Variance Under</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Date_Type__c</fullName>
        <label>Date Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Last Week</fullName>
                </value>
                <value>
                    <fullName>Current Week</fullName>
                </value>
                <value>
                    <fullName>Manual Run</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Time Variance Calculations</relationshipLabel>
        <relationshipName>Time_Variance_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Include_Sublevels__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select to generate the time variance calculations based on all sub-levels of the selected region, practice or group.</inlineHelpText>
        <label>Include Sublevels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Time Variance Calculations</relationshipLabel>
        <relationshipName>Time_Variance_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Time Variance Calculations</relationshipLabel>
        <relationshipName>Time_Variance_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Week_End_Date__c</fullName>
        <label>Week End Date</label>
        <type>Date</type>
    </fields>
    <label>Time Variance Calculation</label>
    <nameField>
        <label>Time Variance Calculation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Variance Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>